@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-09T01:40:28Z",
+  "timestamp" : "2022-07-09T08:21:37Z",
   "count_outdated" : 2216,
   "uniques_outdated" : 469,
-  "count" : 2264,
-  "uniques" : 496,
+  "count" : 2272,
+  "uniques" : 502,
   "clones" : [
     {
       "timestamp": "2022-06-25T00:00:00Z",
@@ -102,6 +102,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-09T00:00:00Z",
+      "count": 8,
+      "count_minmax": [ 8, 8 ],
+      "uniques": 6,
+      "uniques_minmax": [ 6, 6 ]
     }
   ]
 }
