@@ -1,6 +1,6 @@
 {
-  "count": 48,
-  "uniques": 13,
+  "count": 56,
+  "uniques": 17,
   "clones": [
     {
       "timestamp": "2022-06-25T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2022-07-08T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-09T00:00:00Z",
+      "count": 8,
+      "uniques": 6
     }
   ]
 }
